fix: appointment-area font-size and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -5102,7 +5102,7 @@ body.admin-bar .header-menu-area.sticky_menu {
 @media only screen and (min-width: 0px) and (max-width: 767px) {
   .consultation-form {
     border-radius: 0px;
-    padding: 70px 10px 20px 20px;
+    padding: 70px 10px 20px 20px !important;
   }
 }
 .consultation-form .base-area {
