--- a/sass/modules/_appointment-area.scss
+++ b/sass/modules/_appointment-area.scss
@@ -15,7 +15,7 @@
     }
     @include sm {
         border-radius: 0px;
-        padding: 70px 10px 20px 20px;
+        padding: 70px 10px 20px 20px !important;
     }
     .base-area {
         background: linear-gradient(to top, $black, $primary-color);
